add default loc

--- a/statusd/templates/index.html
+++ b/statusd/templates/index.html
@@ -7,7 +7,6 @@
                 margin-top: -58.59px;
             }
         }
-
         .navbar .nav-link {
             color: #fff !important;
         }
@@ -23,7 +22,7 @@
                         aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarExample01">
+                <div class="collapse navbar-collapse">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 
                     <ul class="navbar-nav d-flex flex-row">
@@ -52,7 +51,7 @@
                 <div class="container d-flex align-items-center justify-content-center text-center h-100">
                     <div class="text-white">
                         <h1 class="mb-3">Cybernetically Advanced Printer Monitoring System</h1>
-                        <a class="btn btn-outline-light btn-lg m-2" href="/locations" role="button">Locations</a>
+                        <a class="btn btn-outline-light btn-lg m-2" href="/{{ default_loc }}" role="button">Explore Locations</a>
                     </div>
                 </div>
             </div>
