--- a/statusd/templates/index.html
+++ b/statusd/templates/index.html
@@ -51,7 +51,7 @@
                 <div class="container d-flex align-items-center justify-content-center text-center h-100">
                     <div class="text-white">
                         <h1 class="mb-3">Cybernetically Advanced Printer Monitoring System</h1>
-                        <a class="btn btn-outline-light btn-lg m-2" href="/{{ default_loc }}" role="button">Explore Locations</a>
+                        <a class="btn btn-outline-light btn-lg m-2" href="/{{ loc }}" role="button">Explore Locations</a>
                     </div>
                 </div>
             </div>
