--- a/statusd/templates/components/admin-dashboard.html
+++ b/statusd/templates/components/admin-dashboard.html
@@ -53,11 +53,9 @@
     <div class="container-fluid pt-4 _hidden" id="settingsContainer">
         <div class="row">
             <h1 class="col-sm-8">Settings</h1>
-            <button type="button"
+            <button type="button" id="settingsReset"
                     class="btn btn-primary col-sm-2 m-lg-auto"
-                    style="width: 150px; height: 40px" data-mdb-ripple-init data-mdb-modal-init
-                    data-mdb-target="#settingModal"
-            >
+                    style="width: 150px; height: 40px" data-mdb-ripple-init>
                 Reset Default
             </button>
         </div>
