--- a/statusd/templates/layout.html
+++ b/statusd/templates/layout.html
@@ -18,25 +18,7 @@
 <body>
 {% block body %}{% endblock %}
 </body>
-<footer class="bg-light text-lg-start" id="footer">
-    <div class="text-center p-3 text-dark">
-        &copy 2023 - 2024 <a class="text-dark" href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">nyuprinters</a>
-        <p class="text-center text-dark">nyuprinters is free and open-source software released under the MIT License.
-            "NYU" is a registered trademark of New York University and is not associated with this software in any way.</p>
-    </div>
-</footer>
-<script>
-    $(document).ready(function () {
-        setInterval(function () {
-            let docHeight = $(window).height();
-            let footerHeight = $('#footer').height();
-            let footerTop = $('#footer').position().top + footerHeight;
-            let marginTop = (docHeight - footerTop + 10);
-            if (footerTop < docHeight)
-                $('#footer').css('margin-top', marginTop + 'px'); // padding of 30 on footer
-            else
-                $('#footer').css('margin-top', '0px');
-        }, 250);
-    });
-</script>
+{% if not hide_footer %}
+    {% include 'components/footer.html' %}
+{% endif %}
 </html>
