--- a/statusd/templates/components/login-modal.html
+++ b/statusd/templates/components/login-modal.html
@@ -1,11 +1,5 @@
-<script>
-    $(document).ready(() => {
-        $("#login").modal('show');
-    });
-</script>
 <!-- Login -->
-<div class="modal fade" id="login" data-mdb-backdrop="static" data-mdb-keyboard="false" tabindex="-1"
-     aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="login" data-mdb-backdrop="static" data-mdb-keyboard="false" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -29,15 +23,19 @@
                             <!-- Checkbox -->
                             <div class="form-check">
                                 <input name="remember" class="form-check-input" type="checkbox" id="remember" checked/>
-                                <label class="form-check-label" for="remember"> Remember me </label>
+                                <label class="form-check-label" for="remember">Remember me</label>
                             </div>
                         </div>
                     </div>
                     <!-- Submit button -->
-                    <button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block">Authenticate
-                    </button>
+                    <button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block">Authenticate</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(() => {
+        $("#login").modal('show');
+    });
+</script>
