--- a/statusd/templates/components/settings.html
+++ b/statusd/templates/components/settings.html
@@ -36,7 +36,7 @@
         <input class="form-control" type="number" id="updated_try_delay_factor">
     </div>
     <div class="set-item">
-        <label for="updated_constant_field_updates">Request Delay Factor <sup>5</sup></label>
+        <label for="updated_constant_field_updates">Meta-Data Smart Updates <sup>5</sup></label>
         <input class="form-check-input" type="checkbox" id="updated_constant_field_updates">
     </div>
 </div>
