--- a/statusd/templates/components/sidebar.html
+++ b/statusd/templates/components/sidebar.html
@@ -13,7 +13,7 @@
                class="list-group-item list-group-item-action py-2 ripple text-light">
                 <i class="fas fa-gear fa-fw me-3"></i><span>Settings</span>
             </a>
-            <a href="javascript:show_tab('usersContainer')"
+            <a href="javascript:show_tab('usersContainer');fill_users_table();"
                class="list-group-item list-group-item-action py-2 ripple text-light">
                 <i class="fas fa-users fa-fw me-3"></i><span>Users</span>
             </a>
