--- a/statusd/templates/underground.html
+++ b/statusd/templates/underground.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 
-{% set hide_footer= not footer %}
+{% set hide_footer = not footer %}
 {% set locs = locs %}
+{% set superuser = superuser %}
 
 {% block title %}Underground{% endblock %}
 {% if login %}
