--- a/statusd/templates/components/navbar.html
+++ b/statusd/templates/components/navbar.html
@@ -1,3 +1,4 @@
+{% set name=name %}
 <nav id="main-navbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
     <!-- Container wrapper -->
     <div class="container-fluid">
@@ -20,7 +21,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li>
-                        <a class="dropdown-item" href="javascript:logout();">Logout</a>
+                        <a class="dropdown-item" href="auth/logout">Logout ({{ name }})</a>
                     </li>
                 </ul>
             </li>
