--- a/statusd/templates/components/sidebar.html
+++ b/statusd/templates/components/sidebar.html
@@ -17,7 +17,7 @@
                class="list-group-item list-group-item-action py-2 ripple text-light">
                 <i class="fas fa-users fa-fw me-3"></i><span>Users</span>
             </a>
-            <a href="javascript:show_tab('profileContainer')"
+            <a href="javascript:show_tab('profileContainer');fill_user_profile();"
                class="list-group-item list-group-item-action py-2 ripple text-light">
                 <i class="fas fa-user fa-fw me-3"></i><span>Profile</span>
             </a>
