--- a/statusd/templates/components/sidebar.html
+++ b/statusd/templates/components/sidebar.html
@@ -21,7 +21,7 @@
                class="list-group-item list-group-item-action py-2 ripple text-light">
                 <i class="fas fa-user fa-fw me-3"></i><span>Profile</span>
             </a>
-            <a href="javascript:show_tab('aboutContainer')"
+            <a href="javascript:show_tab('aboutContainer');fill_contrib()"
                class="list-group-item list-group-item-action py-2 ripple text-light">
                 <i class="fas fa-info-circle fa-fw me-3"></i><span>About</span>
             </a>
