--- a/statusd/templates/underground.html
+++ b/statusd/templates/underground.html
@@ -3,6 +3,7 @@
 {% set hide_footer = not footer %}
 {% set locs = locs %}
 {% set superuser = superuser %}
+{% set github = github %}
 
 {% block title %}Underground{% endblock %}
 {% if login %}
