--- a/statusd/templates/components/about.html
+++ b/statusd/templates/components/about.html
@@ -1,4 +1,3 @@
-{% set github=github %}
 <div>
     <p>
         <a href="{{ github }}" target="_blank">nyuprinters</a> is an opensource printer monitoring system created by
@@ -8,7 +7,7 @@
     </p>
     <h3>How to contribute</h3>
     <p>
-        If you'd like to improve or add features to the project, please visit see the contribution guide on github.
+        If you'd like to improve or add features to the project, please see the contribution guide on github.
     </p>
     <h3>Contributors</h3>
     <p id="contrib"></p>
@@ -18,6 +17,7 @@
         width: 50px;
         height: 50px;
         padding: 5px;
+        border-radius: 50%
     }
     #contrib a {
         display: inline-block;
@@ -25,5 +25,6 @@
     #contrib {
         text-align: left;
         border: 1px solid green;
+        border-radius: 3px;
     }
 </style>
