--- a/statusd/templates/components/about.html
+++ b/statusd/templates/components/about.html
@@ -17,7 +17,8 @@
         width: 50px;
         height: 50px;
         padding: 5px;
-        border-radius: 50%
+        border-radius: 50%;
+        margin: 5px;
     }
     #contrib a {
         display: inline-block;
