--- a/statusd/templates/components/about.html
+++ b/statusd/templates/components/about.html
@@ -7,9 +7,16 @@
     </p>
     <h3>How to contribute</h3>
     <p>
-        If you'd like to improve or add features to the project, please see the contribution guide on github.
+        If you'd like to improve or add features to the project, please see the
+        <a href="https://github.com/sproutmaster/nyuprinters/blob/dev/docs/dev-guide.md">contribution guide</a> on
+        GitHub.
+        <span>We got Discord too</span>
+        <a href="{{ discord }}" rel="nofollow" target="_new">
+            <i class="fab fa-discord"></i>
+        </a>
+        <span>.</span>
     </p>
-    <h3>Contributors</h3>
+    <h3>People who made this project possible</h3>
     <p id="contrib"></p>
 </div>
 <style>
@@ -20,9 +27,11 @@
         border-radius: 50%;
         margin: 5px;
     }
+
     #contrib a {
         display: inline-block;
     }
+
     #contrib {
         text-align: left;
         border: 1px solid green;
