--- a/statusd/templates/components/admin-dashboard.html
+++ b/statusd/templates/components/admin-dashboard.html
@@ -2,6 +2,8 @@
 {% set superuser=superuser %}
 {% set name=name %}
 {% set github=github %}
+{% set discord = discord %}
+
 <header>
     <!-- Sidebar -->
     {% include 'components/sidebar.html' %}
