--- a/statusd/templates/underground.html
+++ b/statusd/templates/underground.html
@@ -4,6 +4,7 @@
 {% set locs = locs %}
 {% set superuser = superuser %}
 {% set github = github %}
+{% set discord = discord %}
 
 {% block title %}Underground{% endblock %}
 {% if login %}
