--- a/statusd/templates/index.html
+++ b/statusd/templates/index.html
@@ -66,7 +66,7 @@
                         <h4><strong>For students, By students</strong></h4>
                         <p class="text-muted">
                             This project started out as a way to monitor printers at Bobst Library for IT student staff.
-                            Since then, it has since grown into a full fledged project with the goal of monitoring printers across NYU.
+                            Since then, it has since grown into a full-fledged project with the goal of monitoring printers across NYU.
                         </p>
                     </div>
                     <div class="col-md-6 gx-5 mb-4">
