refactor stylesheet url

--- a/statusd/templates/app.html
+++ b/statusd/templates/app.html
@@ -4,8 +4,8 @@
 {% block title %}{{ loc }}{% endblock %}
 
 {% block imports %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='/app/styles.css') }}"/>
-    <script type="text/javascript" src="{{ url_for('static', filename='app/app.js') }}"></script>
+    <link rel="stylesheet" href="/static/app/styles.css"/>
+    <script type="text/javascript" src="/static/app/app.js"></script>
 {% endblock %}
 
 {% block body %}
