show full building name on dropdown

--- a/statusd/templates/app.html
+++ b/statusd/templates/app.html
@@ -23,7 +23,7 @@
                             <li class="nav-item me-3 me-lg-0 dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button"
                                    data-mdb-toggle="dropdown">
-                                    Locations
+                                    {{ loc_full }}
                                 </a>
                                 {#<li><hr class="dropdown-divider"/></li>#}
                                 <ul class="dropdown-menu">
